# OpenMesh

./: README.md
OpenMesh-6.3/: CMakeLists.txt
OpenMesh-6.3/OpenMesh/Core/IO/reader/: STLReader.cc
OpenMesh-6.3/OpenMesh/Core/Mesh/: PolyConnectivity.cc
OpenMesh-6.3/OpenMesh/Tools/Utils/: conio.cc
OpenMesh-7.1/src/OpenMesh/Core/: CMakeLists.txt
OpenMesh-7.1/src/OpenMesh/Tools/: CMakeLists.txt
